FIX: linting errors corrected

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE>
 <html>
 	<head>
 		<title>S3 upload pipeline</title>
 	</head>
 	<body>
-		<p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>Javascript.
+		<p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>Javascript</strong>.
 	</body>
 </html>
